@@ -1,3 +1,10 @@
+2018-09-21  Jonathan Wakely  <jwakely@redhat.com>
+
+	* testsuite/26_numerics/headers/cmath/hypot-long-double.cc: Remove.
+	* testsuite/26_numerics/headers/cmath/hypot.cc: Restore test for
+	long double unconditionally, but use lower tolerance when
+	sizeof(long double) == sizeof(double).
+
 2018-09-20  Christophe Lyon  <christophe.lyon@linaro.org>
 
 	* testsuite/26_numerics/headers/cmath/hypot-long-double.cc: Skip
